typescript/checker/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList5.ts.stderr
error: ReturnRequired {
    span: Span {
        lo: BytePos(
            14,
        ),
        hi: BytePos(
            29,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList5.ts:1:15
  |
1 | function A(): (public B) => C {
  |               ^^^^^^^^^^^^^^^

error: TS2369
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList5.ts:1:16
  |
1 | function A(): (public B) => C {
  |                ^^^^^^^^

error: NameNotFound {
    span: Span {
        lo: BytePos(
            28,
        ),
        hi: BytePos(
            29,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList5.ts:1:29
  |
1 | function A(): (public B) => C {
  |                             ^

